force-app/main/default/objects/Mass_Assignment_Table_Config__mdt/Mass_Assignment_Table_Config__mdt.object-meta.xml
<CustomObject>
    <label>Mass Assignment Table Config</label>
    <pluralLabel>Mass Assignment Table Config</pluralLabel>
</CustomObject>