force-app/main/default/objects/Mass_Assignment_Table_Config__mdt/fields/Header_Value__c.field-meta.xml
<CustomField>
    <fullName>Header_Value__c</fullName>
    <label>Header Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>