force-app/main/default/objects/Mass_Assignment_Table_Config__mdt/fields/Limit_Records__c.field-meta.xml
<CustomField>
    <fullName>Limit_Records__c</fullName>
    <label>Limit Records</label>
    <length>25</length>
    <type>Text</type>
</CustomField>