force-app/main/default/objects/Mass_Assignment_Table_Config__mdt/fields/Object_APIName__c.field-meta.xml
<CustomField>
    <fullName>Object_APIName__c</fullName>
    <label>Object APIName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>