force-app/main/default/objects/Mass_Assignment_Table_Config__mdt/fields/Query_Filters__c.field-meta.xml
<CustomField>
    <fullName>Query_Filters__c</fullName>
    <label>Query Filters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>